opam-version: "2.0"
maintainer: "Seb Mondet <seb@mondet.org>"
authors: [
  "Isaac Hodes <isaachodes@gmail.com>"
  "B. Arman Aksoy <arman@aksoy.org>"
  "Seb Mondet <seb@mondet.org>"
  "Nick Zalutskiy <nick@const.fun>"
  "Armaël Guéneau <armael.gueneau@ens-lyon.fr>"
]
homepage: "https://github.com/hammerlab/ppx_deriving_cmdliner"
bug-reports: "https://github.com/hammerlab/ppx_deriving_cmdliner/issues"
dev-repo: "git+https://github.com/hammerlab/ppx_deriving_cmdliner.git"
doc: "http://hammerlab.github.io/ppx_deriving_cmdliner"
license: "MIT"
version: "0.5.1-dev"
tags: ["syntax" "cli"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "4.03"}
  "cmdliner"     {>= "1.0.0"}
  "result"
  "ppx_deriving" {>= "5.0"}
  "dune"
  "ppxlib"       {>= "0.14.0"}
  "alcotest"     {with-test}
  "ppx_import"   {with-test & >= "1.1"}
]
synopsis: "Cmdliner.Term.t generator"
description: """
ppx_deriving_cmdliner is a ppx_deriving plugin that generates
a Cmdliner Term.t for a record type."""

